...
              onTap: () => service.changeDictionaryType('thaiPali'),
            ),
          ),
          Expanded(
            child: _buildTypeButton(
              context,
              title: 'มังคลัตถ',
              icon: Icons.auto_stories,
              isSelected: service.book == 'mungkala',
              onTap: () => service.changeBook('mungkala'),
              activeColors: _bookColors,
            ),
          ),
...
